added header content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,16 @@
   </head>
   <body>
     <header>
-
+      <img src="./resources/images/logo.jpg" alt="My Times logo">
+      <h3>My Times</h3>
+      <nav>
+        <ul>
+          <li>World</li>
+          <li>U.S.</li>
+          <li>Tech</li>
+          <li>Science</li>
+        </ul>
+      </nav>
     </header>
     <div class="main">
 
