positioned header content

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
       <h3>My Times</h3>
       <nav>
         <ul>
-          <li>World</li>
-          <li>U.S.</li>
-          <li>Tech</li>
-          <li>Science</li>
+          <a href=""><li>World</li></a>
+          <a href=""><li>U.S.</li></a>
+          <a href=""><li>Tech</li></a>
+          <a href=""><li>Science</li></a>
         </ul>
       </nav>
     </header>
