--- a/index.html
+++ b/index.html
@@ -59,9 +59,18 @@
         <div class="image">
           <img src="./resources/images/news-bite.png" alt="">
         </div>
-        <div class="article">
+        <div class="news-bites">
           <h2>NEWS BITES</h2>
-          <p>Cat Emoji Goes Viral Buy Youtube Views Home Business Advertising Ideas Advertising Internet Online Illustration in Marketing Materials Finally a Top Secret Way You Can</p>
+          <div class="links">
+            <ul>
+              <li>Cat Emoji Goes Viral</li>
+              <li>Buy Youtube Views</li>
+              <li>Home Business Advertising Ideas</li>
+              <li>Advertising Internet Online</li>
+              <li>Illustration in Marketing Materials</li>
+              <li>Finally a Top Secret Way You Can</li>
+            </ul>
+          </div>
         </div>
       </div>
 
