added footer content and styling

--- a/index.html
+++ b/index.html
@@ -73,10 +73,19 @@
           </div>
         </div>
       </div>
-
     </div>
-    <footer>
 
-    </footer>
+    <div class="footer">
+      <div class="foot-nav">
+        <h2 class="title">MY Times</h2>
+        <nav>
+          <a href=""><li>World</li></a>
+          <a href=""><li>U.S.</li></a>
+          <a href=""><li>Tech</li></a>
+          <a href=""><li>Science</li></a>
+        </nav>
+      </div>
+    <div>
+
   </body>
 </html>
