finished footer positioning

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
           <a href=""><li>Tech</li></a>
           <a href=""><li>Science</li></a>
         </nav>
+        <p class="copy">&copy2016, My Times (A Division of Codecademy bite)</p>
       </div>
-    <div>
+    </div>
 
   </body>
 </html>
